generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
}

// ─── Enums ──────────────────────────────────────────────────

enum TeamStatus {
  ACTIVE
  INACTIVE
}

enum PlayerPosition {
  GK
  DF
  MF
  FW
}

enum PlayerType {
  DOMESTIC
  FOREIGN
}

enum MatchStatus {
  DRAFT
  PUBLISHED
  LOCKED
  FINISHED
  POSTPONED
}

enum MatchScoreSource {
  ADMIN
  REFEREE
}

enum SeasonStatus {
  UPCOMING
  IN_PROGRESS
  COMPLETED
}

enum SeasonTeamStatus {
  REGISTERED
  APPROVED
  REJECTED
  WITHDRAWN
}

enum TeamInvitationSourceType {
  PREVIOUS_TOP_8
  PROMOTED
  REPLACEMENT
}

enum TeamInvitationStatus {
  SENT
  ACCEPTED
  DECLINED
  EXPIRED
}

enum PromotionQualificationType {
  CHAMPION
  RUNNER_UP
  PLAYOFF
  REPLACEMENT_POOL
}

enum PromotionCandidateStatus {
  ELIGIBLE
  INVITED
  ACCEPTED
  DECLINED
  SKIPPED
}

enum EventType {
  GOAL
  OWN_GOAL
  YELLOW_CARD
  RED_CARD
  SUBSTITUTION
  PENALTY
  PENALTY_MISS
}

enum MatchKitType {
  PRIMARY
  BACKUP
}

enum MatchLineupRole {
  STARTER
  SUBSTITUTE
}

enum MatchLineupStatus {
  SUBMITTED
  APPROVED
  REJECTED
}

enum PlayerSuspensionStatus {
  ACTIVE
  SERVED
  CANCELLED
}

enum OfficialStatus {
  ACTIVE
  INACTIVE
}

enum MatchOfficialRole {
  MAIN_REFEREE
  ASSISTANT_REFEREE
  FOURTH_OFFICIAL
  SUPERVISOR
}

enum UserRole {
  ADMIN
  TEAM_MANAGER
  REFEREE
  SUPERVISOR
  PUBLIC
}

enum TeamManagerRequestType {
  CREATE_TEAM
  CLAIM_EXISTING_TEAM
  UPDATE_MANAGED_TEAM
  DELETE_MANAGED_TEAM
}

enum TeamManagerRequestStatus {
  PENDING
  APPROVED
  REJECTED
}

enum ManagerRequestStatus {
  PENDING
  APPROVED
  REJECTED
}

enum ManagerPlayerRequestType {
  ADD_PLAYER
  UPDATE_PLAYER
  REMOVE_FROM_TEAM
}

enum ManagerStadiumRequestType {
  CREATE_HOME_STADIUM
  UPDATE_HOME_STADIUM
  REMOVE_HOME_STADIUM
}

enum OtpType {
  EMAIL_VERIFICATION
  PASSWORD_RESET
}

// ─── Auth Models ────────────────────────────────────────────

model User {
  id            String   @id @default(uuid()) @db.Uuid
  email         String   @unique
  passwordHash  String?  @map("password_hash")
  role          UserRole @default(PUBLIC)
  emailVerified Boolean  @default(false) @map("email_verified")

  // Profile fields
  name      String?
  avatarUrl String? @map("avatar_url")

  // OAuth fields
  googleId   String? @unique @map("google_id")
  facebookId String? @unique @map("facebook_id")

  // Role FK
  roleId String? @map("role_id") @db.Uuid
  roleRef Role?   @relation(fields: [roleId], references: [id], onDelete: SetNull)

  // Fixed club assignment for TEAM_MANAGER accounts.
  managedTeamId String? @map("managed_team_id") @db.Uuid
  managedTeam   Team?   @relation("ManagedTeam", fields: [managedTeamId], references: [id], onDelete: SetNull)

  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")

  refreshTokens RefreshToken[]
  otpCodes      OtpCode[]
  teamManagerAssignments TeamManagerAssignment[]
  teamManagerRequests TeamManagerRequest[] @relation("TeamManagerRequests")
  reviewedTeamManagerRequests TeamManagerRequest[] @relation("ReviewedTeamManagerRequests")
  managerPlayerRequests ManagerPlayerRequest[] @relation("ManagerPlayerRequests")
  reviewedManagerPlayerRequests ManagerPlayerRequest[] @relation("ReviewedManagerPlayerRequests")
  managerStadiumRequests ManagerStadiumRequest[] @relation("ManagerStadiumRequests")
  reviewedManagerStadiumRequests ManagerStadiumRequest[] @relation("ReviewedManagerStadiumRequests")

  @@index([roleId])
  @@index([managedTeamId])
  @@map("users")
}

model OtpCode {
  id     String  @id @default(uuid()) @db.Uuid
  code   String
  type   OtpType
  userId String  @map("user_id") @db.Uuid
  user   User    @relation(fields: [userId], references: [id], onDelete: Cascade)

  usedAt    DateTime? @map("used_at")
  expiresAt DateTime  @map("expires_at")
  createdAt DateTime  @default(now()) @map("created_at")

  @@index([userId])
  @@index([code, type])
  @@map("otp_codes")
}

model RefreshToken {
  id        String @id @default(uuid()) @db.Uuid
  tokenHash String @unique @map("token_hash")
  userId    String @map("user_id") @db.Uuid
  user      User   @relation(fields: [userId], references: [id], onDelete: Cascade)

  // Session info
  userAgent  String?   @map("user_agent")
  ipAddress  String?   @map("ip_address")
  deviceName String?   @map("device_name")
  lastUsedAt DateTime? @map("last_used_at")

  revokedAt DateTime? @map("revoked_at")
  expiresAt DateTime  @map("expires_at")
  createdAt DateTime  @default(now()) @map("created_at")

  @@index([userId])
  @@map("refresh_tokens")
}

model Role {
  id          String   @id @default(uuid()) @db.Uuid
  name        String   @unique
  description String?
  createdAt   DateTime @default(now()) @map("created_at")
  updatedAt   DateTime @updatedAt @map("updated_at")

  users User[]

  @@map("roles")
}

// ─── Core Domain Models ─────────────────────────────────────

model Team {
  id        String     @id @default(uuid()) @db.Uuid
  name      String     @unique
  shortName String?    @map("short_name")
  city      String?
  logoUrl   String?    @map("logo_url")
  coachName String?    @map("coach_name")
  status    TeamStatus @default(ACTIVE)

  stadiumId String?  @map("stadium_id") @db.Uuid
  stadium   Stadium? @relation(fields: [stadiumId], references: [id], onDelete: SetNull)

  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")

  // Relations
  roster       TeamPlayer[]
  seasonTeams  SeasonTeam[]
  homeMatches  Match[]        @relation("HomeTeam")
  awayMatches  Match[]        @relation("AwayTeam")
  matchEvents  MatchEvent[]
  matchTeamRegistrations MatchTeamRegistration[]
  playerSuspensions PlayerSuspension[]
  standings    Standing[]
  managerAssignments TeamManagerAssignment[]
  managedUsers User[] @relation("ManagedTeam")
  managerRequests TeamManagerRequest[]
  managerPlayerRequests ManagerPlayerRequest[]
  managerStadiumRequests ManagerStadiumRequest[]
  invitations TeamInvitation[]
  drawLotResults DrawLotResult[]
  promotionCandidates PromotionCandidate[]

  @@map("teams")
}

model Player {
  id          String         @id @default(uuid()) @db.Uuid
  fullName    String         @map("full_name")
  dob         DateTime
  nationality String
  position    PlayerPosition
  birthPlace  String?        @map("birth_place")
  heightCm    Int?           @map("height_cm")
  weightKg    Int?           @map("weight_kg")
  playerType  PlayerType     @default(DOMESTIC) @map("player_type")
  careerSummary String?      @map("career_summary") @db.Text

  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")

  // Relations
  roster        TeamPlayer[]
  matchEvents   MatchEvent[] @relation("EventPlayer")
  relatedEvents MatchEvent[] @relation("RelatedPlayer")
  lineupSelections MatchLineupPlayer[]
  suspensions PlayerSuspension[]
  bestPlayerReports MatchReport[]
  managerRequests ManagerPlayerRequest[]

  @@index([fullName], map: "players_full_name_idx")
  @@index([nationality], map: "players_nationality_idx")
  @@index([position], map: "players_position_idx")
  @@index([playerType], map: "players_player_type_idx")
  @@map("players")
}

model Stadium {
  id        String @id @default(uuid()) @db.Uuid
  name      String @unique
  address   String?
  city      String
  country   String @default("Việt Nam")
  capacity  Int?
  fifaStars Int?   @map("fifa_stars")

  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")

  // Relations
  teams   Team[]
  matches Match[]
  managerRequests ManagerStadiumRequest[]

  @@map("stadiums")
}

model Season {
  id        String       @id @default(uuid()) @db.Uuid
  name      String       @unique
  year      Int
  status    SeasonStatus @default(UPCOMING)
  startDate DateTime?    @map("start_date")
  endDate   DateTime?    @map("end_date")

  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")

  // Relations
  matches     Match[]
  seasonTeams SeasonTeam[]
  regulations Regulation[]
  standings   Standing[]
  managerAssignments TeamManagerAssignment[]
  invitations TeamInvitation[]
  playerSuspensions PlayerSuspension[]
  drawLotResults DrawLotResult[]
  promotionCandidates PromotionCandidate[]

  @@map("seasons")
}

// ─── Junction / Association Models ──────────────────────────

model TeamPlayer {
  id           String    @id @default(uuid()) @db.Uuid
  teamId       String    @map("team_id") @db.Uuid
  team         Team      @relation(fields: [teamId], references: [id], onDelete: Cascade)
  playerId     String    @map("player_id") @db.Uuid
  player       Player    @relation(fields: [playerId], references: [id], onDelete: Cascade)
  jerseyNumber Int?      @map("jersey_number")
  joinedAt     DateTime  @default(now()) @map("joined_at")
  leftAt       DateTime? @map("left_at")

  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")

  @@unique([teamId, playerId, joinedAt])
  @@index([teamId])
  @@index([playerId])
  @@map("team_players")
}

model SeasonTeam {
  id       String           @id @default(uuid()) @db.Uuid
  seasonId String           @map("season_id") @db.Uuid
  season   Season           @relation(fields: [seasonId], references: [id], onDelete: Cascade)
  teamId   String           @map("team_id") @db.Uuid
  team     Team             @relation(fields: [teamId], references: [id], onDelete: Cascade)
  status   SeasonTeamStatus @default(REGISTERED)

  registeredAt DateTime  @default(now()) @map("registered_at")
  approvedAt   DateTime? @map("approved_at")

  ownerName       String? @map("owner_name")
  ownerCountry    String? @map("owner_country")
  ownerAddress    String? @map("owner_address")
  teamIntroduction String? @map("team_introduction") @db.Text
  primaryKit      String? @map("primary_kit")
  backupKit       String? @map("backup_kit")
  participationFeePaid Boolean @default(false) @map("participation_fee_paid")
  feePaidAt       DateTime? @map("fee_paid_at")
  feeReceiptCode  String? @map("fee_receipt_code")
  feeReceiptUrl   String? @map("fee_receipt_url")
  externalCompetitionSchedule String? @map("external_competition_schedule") @db.Text
  applicationSubmittedAt DateTime? @map("application_submitted_at")
  applicationReviewNote String? @map("application_review_note")

  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")

  @@unique([seasonId, teamId])
  @@index([seasonId])
  @@index([teamId])
  @@map("season_teams")
}

// ─── Match Models ───────────────────────────────────────────

model Match {
  id String @id @default(uuid()) @db.Uuid

  roundNo Int @map("round_no")
  leg     Int @default(1)

  seasonId String? @map("season_id") @db.Uuid
  season   Season? @relation(fields: [seasonId], references: [id], onDelete: SetNull)

  homeTeamId String @map("home_team_id") @db.Uuid
  homeTeam   Team   @relation("HomeTeam", fields: [homeTeamId], references: [id], onDelete: Restrict)
  awayTeamId String @map("away_team_id") @db.Uuid
  awayTeam   Team   @relation("AwayTeam", fields: [awayTeamId], references: [id], onDelete: Restrict)

  stadiumId String?  @map("stadium_id") @db.Uuid
  stadium   Stadium? @relation(fields: [stadiumId], references: [id], onDelete: SetNull)

  kickoffAt DateTime? @map("kickoff_at")
  homeScore Int?      @map("home_score")
  awayScore Int?      @map("away_score")
  scoreSource MatchScoreSource? @map("score_source")

  status MatchStatus @default(DRAFT)

  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")

  // Relations
  events  MatchEvent[]
  teamRegistrations MatchTeamRegistration[]
  sourceSuspensions PlayerSuspension[] @relation("SuspensionSourceMatch")
  effectiveSuspensions PlayerSuspension[] @relation("SuspensionEffectiveMatch")
  officialAssignments MatchOfficialAssignment[]
  matchReport MatchReport?
  disciplineReport DisciplineReport?

  @@index([roundNo], map: "matches_round_no_idx")
  @@index([status], map: "matches_status_idx")
  @@index([kickoffAt], map: "matches_kickoff_at_idx")
  @@index([homeTeamId], map: "matches_home_team_id_idx")
  @@index([awayTeamId], map: "matches_away_team_id_idx")
  @@index([seasonId], map: "matches_season_id_idx")
  @@index([seasonId, roundNo], map: "matches_season_id_round_no_idx")
  @@map("matches")
}

model MatchEvent {
  id      String    @id @default(uuid()) @db.Uuid
  matchId String    @map("match_id") @db.Uuid
  match   Match     @relation(fields: [matchId], references: [id], onDelete: Cascade)
  minute  Int
  type    EventType

  goalType String? @map("goal_type")

  playerId        String? @map("player_id") @db.Uuid
  player          Player? @relation("EventPlayer", fields: [playerId], references: [id], onDelete: SetNull)
  relatedPlayerId String? @map("related_player_id") @db.Uuid
  relatedPlayer   Player? @relation("RelatedPlayer", fields: [relatedPlayerId], references: [id], onDelete: SetNull)
  teamId          String? @map("team_id") @db.Uuid
  team            Team?   @relation(fields: [teamId], references: [id], onDelete: SetNull)

  note String?
  source String @default("MANUAL")

  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")

  @@index([matchId])
  @@index([playerId])
  @@index([teamId])
  @@index([type], map: "match_events_type_idx")
  @@index([matchId, source], map: "match_events_match_id_source_idx")
  @@map("match_events")
}

model MatchTeamRegistration {
  id      String @id @default(uuid()) @db.Uuid
  matchId String @map("match_id") @db.Uuid
  match   Match  @relation(fields: [matchId], references: [id], onDelete: Cascade)
  teamId  String @map("team_id") @db.Uuid
  team    Team   @relation(fields: [teamId], references: [id], onDelete: Cascade)

  kitType   MatchKitType      @default(PRIMARY) @map("kit_type")
  formation String
  status    MatchLineupStatus @default(SUBMITTED)

  submittedAt DateTime  @default(now()) @map("submitted_at")
  reviewedAt  DateTime? @map("reviewed_at")
  reviewNote  String?   @map("review_note")

  lineupPlayers MatchLineupPlayer[]

  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")

  @@unique([matchId, teamId])
  @@index([matchId])
  @@index([teamId])
  @@index([status])
  @@map("match_team_registrations")
}

model MatchLineupPlayer {
  id             String                @id @default(uuid()) @db.Uuid
  registrationId String                @map("registration_id") @db.Uuid
  registration   MatchTeamRegistration @relation(fields: [registrationId], references: [id], onDelete: Cascade)
  playerId       String                @map("player_id") @db.Uuid
  player         Player                @relation(fields: [playerId], references: [id], onDelete: Restrict)

  role         MatchLineupRole
  position     PlayerPosition?
  shirtNumber  Int? @map("shirt_number")

  createdAt DateTime @default(now()) @map("created_at")

  @@unique([registrationId, playerId])
  @@index([playerId])
  @@index([role])
  @@map("match_lineup_players")
}

model PlayerSuspension {
  id       String @id @default(uuid()) @db.Uuid
  playerId String @map("player_id") @db.Uuid
  player   Player @relation(fields: [playerId], references: [id], onDelete: Cascade)
  teamId   String @map("team_id") @db.Uuid
  team     Team   @relation(fields: [teamId], references: [id], onDelete: Cascade)
  seasonId String @map("season_id") @db.Uuid
  season   Season @relation(fields: [seasonId], references: [id], onDelete: Cascade)

  sourceMatchId    String @map("source_match_id") @db.Uuid
  sourceMatch      Match  @relation("SuspensionSourceMatch", fields: [sourceMatchId], references: [id], onDelete: Cascade)
  effectiveMatchId String @map("effective_match_id") @db.Uuid
  effectiveMatch   Match  @relation("SuspensionEffectiveMatch", fields: [effectiveMatchId], references: [id], onDelete: Cascade)

  reason String
  status PlayerSuspensionStatus @default(ACTIVE)
  servedAt DateTime? @map("served_at")

  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")

  @@unique([playerId, sourceMatchId, effectiveMatchId, reason])
  @@index([teamId])
  @@index([seasonId])
  @@index([effectiveMatchId])
  @@index([status])
  @@map("player_suspensions")
}

model Official {
  id       String         @id @default(uuid()) @db.Uuid
  fullName String         @map("full_name")
  email    String?
  phone    String?
  status   OfficialStatus @default(ACTIVE)

  assignments MatchOfficialAssignment[]
  disciplineReports DisciplineReport[]

  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")

  @@index([status])
  @@map("officials")
}

model MatchOfficialAssignment {
  id         String            @id @default(uuid()) @db.Uuid
  matchId    String            @map("match_id") @db.Uuid
  match      Match             @relation(fields: [matchId], references: [id], onDelete: Cascade)
  officialId String            @map("official_id") @db.Uuid
  official   Official          @relation(fields: [officialId], references: [id], onDelete: Restrict)
  role       MatchOfficialRole

  publishedAt DateTime @default(now()) @map("published_at")
  note        String?

  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")

  @@unique([matchId, officialId, role])
  @@index([matchId])
  @@index([officialId])
  @@index([role])
  @@map("match_official_assignments")
}

model MatchReport {
  id                String   @id @default(uuid()) @db.Uuid
  matchId           String   @unique @map("match_id") @db.Uuid
  match             Match    @relation(fields: [matchId], references: [id], onDelete: Cascade)
  submittedByUserId String?  @map("submitted_by_user_id") @db.Uuid

  homeScore    Int    @map("home_score")
  awayScore    Int    @map("away_score")
  bestPlayerId String? @map("best_player_id") @db.Uuid
  bestPlayer   Player? @relation(fields: [bestPlayerId], references: [id], onDelete: SetNull)

  technicalStats Json?    @map("technical_stats")
  note           String?  @db.Text
  submittedAt    DateTime @default(now()) @map("submitted_at")

  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")

  @@index([bestPlayerId])
  @@index([submittedByUserId])
  @@map("match_reports")
}

model DisciplineReport {
  id           String   @id @default(uuid()) @db.Uuid
  matchId      String   @unique @map("match_id") @db.Uuid
  match        Match    @relation(fields: [matchId], references: [id], onDelete: Cascade)
  supervisorId String   @map("supervisor_id") @db.Uuid
  supervisor   Official @relation(fields: [supervisorId], references: [id], onDelete: Restrict)

  organizationRating String  @map("organization_rating")
  refereeIssues      String? @map("referee_issues") @db.Text
  playerIssues       String? @map("player_issues") @db.Text
  organizerIssues    String? @map("organizer_issues") @db.Text
  notes              String? @db.Text
  sentToDisciplinaryAt DateTime? @map("sent_to_disciplinary_at")
  submittedAt          DateTime  @default(now()) @map("submitted_at")

  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")

  @@index([supervisorId])
  @@map("discipline_reports")
}

// ─── Regulation & Standings ─────────────────────────────────

model Regulation {
  id        String @id @default(uuid()) @db.Uuid
  seasonId  String @map("season_id") @db.Uuid
  season    Season @relation(fields: [seasonId], references: [id], onDelete: Cascade)
  key       String
  value     String
  valueType String @map("value_type")

  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")

  @@unique([seasonId, key])
  @@index([seasonId])
  @@map("regulations")
}

model Standing {
  id           String @id @default(uuid()) @db.Uuid
  seasonId     String @map("season_id") @db.Uuid
  season       Season @relation(fields: [seasonId], references: [id], onDelete: Cascade)
  teamId       String @map("team_id") @db.Uuid
  team         Team   @relation(fields: [teamId], references: [id], onDelete: Cascade)
  played       Int    @default(0)
  win          Int    @default(0)
  draw         Int    @default(0)
  loss         Int    @default(0)
  goalsFor     Int    @default(0) @map("goals_for")
  goalsAgainst Int    @default(0) @map("goals_against")
  goalDiff     Int    @default(0) @map("goal_diff")
  points       Int    @default(0)
  rank         Int?

  updatedAt DateTime @updatedAt @map("updated_at")

  @@unique([seasonId, teamId])
  @@index([seasonId])
  @@map("standings")
}

model DrawLotResult {
  id           String   @id @default(uuid()) @db.Uuid
  seasonId     String   @map("season_id") @db.Uuid
  season       Season   @relation(fields: [seasonId], references: [id], onDelete: Cascade)
  teamId       String   @map("team_id") @db.Uuid
  team         Team     @relation(fields: [teamId], references: [id], onDelete: Cascade)

  resolvedRank Int      @map("resolved_rank")
  note         String?  @db.Text
  resolvedAt   DateTime @default(now()) @map("resolved_at")
  resolvedBy   String?  @map("resolved_by")
  confirmed    Boolean  @default(false)

  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")

  @@unique([seasonId, teamId])
  @@index([seasonId])
  @@map("draw_lot_results")
}

model TeamManagerAssignment {
  id       String @id @default(uuid()) @db.Uuid
  userId   String @map("user_id") @db.Uuid
  user     User   @relation(fields: [userId], references: [id], onDelete: Cascade)
  seasonId String @map("season_id") @db.Uuid
  season   Season @relation(fields: [seasonId], references: [id], onDelete: Cascade)
  teamId   String @map("team_id") @db.Uuid
  team     Team   @relation(fields: [teamId], references: [id], onDelete: Restrict)

  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")

  @@unique([userId, seasonId])
  @@index([teamId])
  @@index([seasonId])
  @@map("team_manager_assignments")
}

model TeamManagerRequest {
  id        String                   @id @default(uuid()) @db.Uuid
  managerId String                   @map("manager_id") @db.Uuid
  manager   User                     @relation("TeamManagerRequests", fields: [managerId], references: [id], onDelete: Cascade)
  requestType TeamManagerRequestType @map("request_type")
  status    TeamManagerRequestStatus @default(PENDING)

  teamId String? @map("team_id") @db.Uuid
  team   Team?   @relation(fields: [teamId], references: [id], onDelete: SetNull)

  proposedTeamName      String? @map("proposed_team_name")
  proposedTeamShortName String? @map("proposed_team_short_name")
  proposedTeamCity      String? @map("proposed_team_city")
  proposedCoachName     String? @map("proposed_coach_name")
  proposedTeamLogoUrl   String? @map("proposed_team_logo_url")
  proposedTeamStatus    TeamStatus? @map("proposed_team_status")
  proposedStadiumId     String? @map("proposed_stadium_id") @db.Uuid

  requestNote String? @map("request_note") @db.Text
  adminNote   String? @map("admin_note") @db.Text

  reviewedById String? @map("reviewed_by_id") @db.Uuid
  reviewedBy   User?   @relation("ReviewedTeamManagerRequests", fields: [reviewedById], references: [id], onDelete: SetNull)
  reviewedAt   DateTime? @map("reviewed_at")

  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")

  @@index([managerId])
  @@index([teamId])
  @@index([status])
  @@index([requestType])
  @@index([reviewedById])
  @@map("team_manager_requests")
}

model ManagerPlayerRequest {
  id          String                   @id @default(uuid()) @db.Uuid
  managerId   String                   @map("manager_id") @db.Uuid
  manager     User                     @relation("ManagerPlayerRequests", fields: [managerId], references: [id], onDelete: Cascade)
  teamId      String                   @map("team_id") @db.Uuid
  team        Team                     @relation(fields: [teamId], references: [id], onDelete: Cascade)
  playerId    String?                  @map("player_id") @db.Uuid
  player      Player?                  @relation(fields: [playerId], references: [id], onDelete: SetNull)
  requestType ManagerPlayerRequestType @map("request_type")
  status      ManagerRequestStatus     @default(PENDING)
  payload     Json

  requestNote String? @map("request_note") @db.Text
  adminNote   String? @map("admin_note") @db.Text

  reviewedById String?   @map("reviewed_by_id") @db.Uuid
  reviewedBy   User?     @relation("ReviewedManagerPlayerRequests", fields: [reviewedById], references: [id], onDelete: SetNull)
  reviewedAt   DateTime? @map("reviewed_at")

  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")

  @@index([managerId])
  @@index([teamId])
  @@index([playerId])
  @@index([status])
  @@index([requestType])
  @@index([reviewedById])
  @@map("manager_player_requests")
}

model ManagerStadiumRequest {
  id          String                    @id @default(uuid()) @db.Uuid
  managerId   String                    @map("manager_id") @db.Uuid
  manager     User                      @relation("ManagerStadiumRequests", fields: [managerId], references: [id], onDelete: Cascade)
  teamId      String                    @map("team_id") @db.Uuid
  team        Team                      @relation(fields: [teamId], references: [id], onDelete: Cascade)
  stadiumId   String?                   @map("stadium_id") @db.Uuid
  stadium     Stadium?                  @relation(fields: [stadiumId], references: [id], onDelete: SetNull)
  requestType ManagerStadiumRequestType @map("request_type")
  status      ManagerRequestStatus      @default(PENDING)
  payload     Json

  requestNote String? @map("request_note") @db.Text
  adminNote   String? @map("admin_note") @db.Text

  reviewedById String?   @map("reviewed_by_id") @db.Uuid
  reviewedBy   User?     @relation("ReviewedManagerStadiumRequests", fields: [reviewedById], references: [id], onDelete: SetNull)
  reviewedAt   DateTime? @map("reviewed_at")

  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")

  @@index([managerId])
  @@index([teamId])
  @@index([stadiumId])
  @@index([status])
  @@index([requestType])
  @@index([reviewedById])
  @@map("manager_stadium_requests")
}

model PromotionCandidate {
  id       String @id @default(uuid()) @db.Uuid
  seasonId String @map("season_id") @db.Uuid
  season   Season @relation(fields: [seasonId], references: [id], onDelete: Cascade)
  teamId   String @map("team_id") @db.Uuid
  team     Team   @relation(fields: [teamId], references: [id], onDelete: Cascade)

  rank              Int
  sourceCompetition String                     @map("source_competition")
  qualificationType PromotionQualificationType @default(RUNNER_UP) @map("qualification_type")
  status            PromotionCandidateStatus   @default(ELIGIBLE)
  note              String?                    @db.Text

  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")

  @@unique([seasonId, teamId])
  @@unique([seasonId, rank])
  @@index([seasonId])
  @@index([status])
  @@map("promotion_candidates")
}

model TeamInvitation {
  id       String @id @default(uuid()) @db.Uuid
  seasonId String @map("season_id") @db.Uuid
  season   Season @relation(fields: [seasonId], references: [id], onDelete: Cascade)
  teamId   String @map("team_id") @db.Uuid
  team     Team   @relation(fields: [teamId], references: [id], onDelete: Cascade)

  sourceType TeamInvitationSourceType @map("source_type")
  status     TeamInvitationStatus     @default(SENT)

  sentAt      DateTime  @default(now()) @map("sent_at")
  deadlineAt  DateTime  @map("deadline_at")
  responseAt  DateTime? @map("response_at")
  responseReason String? @map("response_reason")
  regulationsSnapshot Json? @map("regulations_snapshot")
  promotionNote       String? @map("promotion_note")

  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")

  @@unique([seasonId, teamId])
  @@index([seasonId])
  @@index([teamId])
  @@index([status])
  @@index([deadlineAt])
  @@map("team_invitations")
}

// ─── Audit Log ──────────────────────────────────────────────

model AuditLog {
  id        String   @id @default(uuid()) @db.Uuid
  userId    String?  @map("user_id") @db.Uuid
  userEmail String?  @map("user_email")
  action    String   // CREATE, UPDATE, DELETE, STATUS_CHANGE
  entity    String   // teams, players, matches, etc.
  entityId  String?  @map("entity_id")
  oldValue  String?  @map("old_value") @db.Text
  newValue  String?  @map("new_value") @db.Text
  ipAddress String?  @map("ip_address")
  userAgent String?  @map("user_agent")
  createdAt DateTime @default(now()) @map("created_at")

  @@index([userId])
  @@index([entity])
  @@index([createdAt])
  @@map("audit_logs")
}

// ─── Notifications ──────────────────────────────────────────

model Notification {
  id         String    @id @default(uuid()) @db.Uuid
  userId     String?   @map("user_id") @db.Uuid
  title      String
  message    String
  type       String    // MATCH_RESULT, STATUS_CHANGE, SCHEDULE_CHANGE, SYSTEM
  entityType String?   @map("entity_type")
  entityId   String?   @map("entity_id")
  readAt     DateTime? @map("read_at")
  createdAt  DateTime  @default(now()) @map("created_at")

  @@index([userId])
  @@index([createdAt])
  @@index([type])
  @@map("notifications")
}
